--- a/index.html
+++ b/index.html
@@ -11,43 +11,46 @@
 </head>
 
 <body>
+    <div>
+        <h2>Moda</h2>
 
-    <h2>Moda</h2>
+        <table>
+            <tr class="produtos-moda">
+                <th>Produto</td>
+                <th>Tamaho</td>
+                <th>Valor</td>
+            </tr>
+            <tr>
+                <td>Camiseta</td>
+                <td>M</td>
+                <td>R$ 49,00</td>
+            </tr>
+            <tr>
+                <td>Tênis</td>
+                <td>42</td>
+                <td>R$ 50,00</td>
+            </tr>
+        </table>
+    </div>
 
-    <table>
-        <tr class="produtos-moda">
-            <th>Produto</td>
-            <th>Tamaho</td>
-            <th>Valor</td>
-        </tr>
-        <tr>
-            <td>Camiseta</td>
-            <td>M</td>
-            <td>R$ 49,00</td>
-        </tr>
-        <tr>
-            <td>Tênis</td>
-            <td>42</td>
-            <td>R$ 50,00</td>
-        </tr>
-    </table>
+    <div>
+        <h2>Casa</h2>
 
-    <h2>Casa</h2>
-
-    <table>
-        <tr class="produtos-casa">
-            <th>Produto</th>
-            <th>Valor</th>
-        </tr>
-        <tr>
-            <td>Sofá</td>
-            <td>R$ 1.200,00</td>
-        </tr>
-        <tr>
-            <td>Televisão</td>
-            <td>R$ 5.000,00</td>
-        </tr>
-    </table>
+        <table>
+            <tr class="produtos-casa">
+                <th>Produto</th>
+                <th>Valor</th>
+            </tr>
+            <tr>
+                <td>Sofá</td>
+                <td>R$ 1.200,00</td>
+            </tr>
+            <tr>
+                <td>Televisão</td>
+                <td>R$ 5.000,00</td>
+            </tr>
+        </table>
+    </div>
 </body>
 
 </html>
